--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 22:48 -->
+<!-- 2019-11-11 Mon 23:46 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 메모 - Seorenn</title>
@@ -9,7 +9,7 @@
 <meta name="author" content="Heeseung Seo (Seorenn)">
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-<link red="canonical" href="https://seorenn.github.io/doom-emacs-shortcuts.html"/>
+<link rel="canonical" href="https://seorenn.github.io/doom-emacs-shortcuts.html"/>
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345"/>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -37,6 +37,14 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-3" id="text-org25f30f3">
 <ul class="org-ul">
 <li><code>SPC f p</code> 설정 파일 열기 (선택 다이얼로그가 뜬다)</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org9a4d19e" class="outline-3">
+<h3 id="org9a4d19e">파일(File) 관련</h3>
+<div class="outline-text-3" id="text-org9a4d19e">
+<ul class="org-ul">
+<li><code>SPC .</code> 현재 디렉토리에서 파일 열기 (생성하기도 가능)</li>
 </ul>
 </div>
 </div>
