--- a/org-tip.html
+++ b/org-tip.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 22:48 -->
+<!-- 2019-11-11 Mon 23:47 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Org Mode 팁 모음 - Seorenn</title>
@@ -9,7 +9,7 @@
 <meta name="author" content="Heeseung Seo (Seorenn)">
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-<link red="canonical" href="https://seorenn.github.io/org-tip.html"/>
+<link rel="canonical" href="https://seorenn.github.io/org-tip.html"/>
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345"/>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
