--- a/swift-5-1.html
+++ b/swift-5-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 23:47 -->
+<!-- 2019-11-12 Tue 13:01 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift 5.1 - Seorenn</title>
@@ -39,7 +39,11 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://seorenn.tistory.com/32">초기화 없는 배열 생성하기 (SE-0245)</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/33">키 패스를 이용한 동적 멤버 찾아보기 (SE-0252)</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/35">Static Subscript (SE-0254)</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/37">Identifiable (SE-0261)</a></li>
 </ul>
+<p>
+이 외에도 몇 가지 더 있는 것 같지만 굳이 외부로 보이는 변화는 없는 것 같아서 생략합니다.
+</p>
 
 <hr>
 
@@ -48,6 +52,6 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
