Update with sitemap generation routines

--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 23:46 -->
+<!-- 2019-11-12 Tue 16:05 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 메모 - Seorenn</title>
@@ -91,6 +91,14 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
+<div id="outline-container-org2719819" class="outline-3">
+<h3 id="org2719819">템플릿(Snippets)</h3>
+<div class="outline-text-3" id="text-org2719819">
+<ul class="org-ul">
+<li><code>SPC s /</code> 스니펫 목록 및 검색하기</li>
+</ul>
+</div>
+</div>
 </div>
 <div id="outline-container-orgad68b59" class="outline-2">
 <h2 id="orgad68b59">특수</h2>
@@ -124,6 +132,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
