--- a/swift.html
+++ b/swift.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-11 Mon 23:47 -->
+<!-- 2019-11-12 Tue 17:08 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift - Seorenn</title>
@@ -57,6 +57,14 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 합니다. 따라서 애플 제품 앱을 개발하려는 용도 외에서는 아직은 추천하기는 좀 힘든 편입니다.
 </p>
 
+<div id="outline-container-org176b2b1" class="outline-2">
+<h2 id="org176b2b1">관련글</h2>
+<div class="outline-text-2" id="text-org176b2b1">
+<ul class="org-ul">
+<li><code>[[./combine-framework.org][Combine Framework]]</code></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-org92211d1" class="outline-2">
 <h2 id="org92211d1">버전들</h2>
 <div class="outline-text-2" id="text-org92211d1">
@@ -78,6 +86,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
