Update several pages

--- a/swift.html
+++ b/swift.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-14 Thu 17:15 -->
+<!-- 2019-11-16 Sat 00:07 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift - Seorenn</title>
@@ -63,7 +63,7 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <h2 id="org176b2b1">관련글</h2>
 <div class="outline-text-2" id="text-org176b2b1">
 <ul class="org-ul">
-<li><code>[[./combine-framework.org][Combine Framework]]</code></li>
+<li><a href="./combine-framework.html">Combine Framework</a></li>
 </ul>
 </div>
 </div>
@@ -88,6 +88,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
