Add some link resources

--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-15 Fri 23:06 -->
+<!-- 2019-11-17 Sun 21:21 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 메모 - Seorenn</title>
@@ -126,6 +126,7 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-3" id="text-org1d34bfc">
 <ul class="org-ul">
 <li><code>gc</code> 선택영역을 주석(commenting)으로 처리하거나 혹은 해제(uncommenting)</li>
+<li><code>SPC c d</code> 레퍼런스로 이동(Look up reference)</li>
 </ul>
 
 <hr>
@@ -136,6 +137,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 15일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
