--- a/emacs.html
+++ b/emacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 13:58 -->
+<!-- 2019-11-17 Sun 21:22 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs - Seorenn</title>
@@ -42,6 +42,7 @@ Emacs Lisp Function 으로 구성되어 있습니다.
 <li><a href="./org-publish.html">Org Publish</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
 <li><a href="./lisp.html">Lisp</a></li>
+<li><a href="./emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
 </div>
 </div>
