--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 13:58 -->
+<!-- 2019-11-17 Sun 21:21 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn</title>
@@ -64,6 +64,19 @@ gtag('config', 'UA-44534026-1');
 <li><a href="./swift.html">Swift</a></li>
 <li><a href="./python.html">Python</a></li>
 <li><a href="./lisp.html">Lisp</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org1822954" class="outline-3">
+<h3 id="org1822954">링크 모음</h3>
+<div class="outline-text-3" id="text-org1822954">
+<ul class="org-ul">
+<li><a href="./apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
+<li><a href="./web-dev-links.html">웹 개발 관련 링크 모음</a></li>
+<li><a href="./server-stack-links.html">서버 스택 관련 링크 모음</a></li>
+<li><a href="./etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
+<li><a href="./emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
+<li><a href="./service_links.html">눈에 띄는 서비스 링크 모음</a></li>
 </ul>
 </div>
 </div>
