--- a/spacemacs.html
+++ b/spacemacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-14 Thu 17:15 -->
+<!-- 2019-11-17 Sun 21:22 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Spacemacs - Seorenn</title>
@@ -47,6 +47,7 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><a href="./emacs.html">Emacs</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
+<li><a href="./emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
 </div>
 </div>
@@ -60,6 +61,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
