--- a/doom-emacs-config.html
+++ b/doom-emacs-config.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-18 Mon 18:10 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 설정 기본 - Seorenn Static Pages</title>
@@ -127,12 +127,18 @@ Doom Emacs 에서 사용하지 않는 확장을 설치하려면 여기에 명시
 </p>
 
 <hr>
+</div>
+</div>
 
-<p>
-관련글: <a href="./doom-emacs.html">Doom Emacs</a>
-</p>
+<div id="outline-container-org76a321c" class="outline-2">
+<h2 id="org76a321c">관련글</h2>
+<div class="outline-text-2" id="text-org76a321c">
+<ul class="org-ul">
+<li><a href="./doom-emacs-config-tip.html">Doom Emacs 설정 팁</a></li>
+<li><a href="./doom-emacs.html">Doom Emacs</a></li>
+</ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 18일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
