--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-18 Mon 18:10 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -35,6 +35,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="doom-emacs-sapzil-config.html">Doom Emacs 삽질기 - 설정편</a></li>
 <li><a href="doom-emacs-sapzil-install.html">Doom Emacs 삽질기 - 설치편</a></li>
 <li><a href="doom-emacs-config.html">Doom Emacs 설정 기본</a></li>
+<li><a href="doom-emacs-config-tip.html">Doom Emacs 설정 팁</a></li>
 <li><a href="doom-emacs-install.html">Doom Emacs 설치하기</a></li>
 <li><a href="emacs.html">Emacs</a></li>
 <li><a href="emacs-lisp-tips.html">Emacs Lisp 팁</a></li>
@@ -59,6 +60,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 18일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
