Update several pages

--- a/swift.html
+++ b/swift.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-18 Mon 19:37 -->
+<!-- 2019-11-19 Tue 16:24 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift - Seorenn Static Pages</title>
@@ -64,6 +64,7 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <div class="outline-text-2" id="text-org176b2b1">
 <ul class="org-ul">
 <li><a href="./combine-framework.html">Combine Framework</a></li>
+<li><a href="./swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 </ul>
 </div>
@@ -89,6 +90,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 18일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
