--- a/swiftui-macos-components.html
+++ b/swiftui-macos-components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-18 Mon 19:37 -->
+<!-- 2019-11-19 Tue 16:24 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>SwiftUI macOS Components - Seorenn Static Pages</title>
@@ -26,7 +26,10 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">SwiftUI macOS Components</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+그냥 제가 사용해 본 컴포넌트를 간략한 예제와 함께 정리하는 글입니다.
+</p>
+
 <div id="outline-container-org03bed51" class="outline-2">
 <h2 id="org03bed51">TabView</h2>
 <div class="outline-text-2" id="text-org03bed51">
@@ -47,8 +50,19 @@ gtag('config', 'UA-44534026-1');
 <p>
 <img src="https://k.kakaocdn.net/dn/dBZyV8/btqzQtnhDoX/17RNhK7haxBZf1MeRJAkzk/img.png" alt="nil"/>
 </p>
+
+<hr>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 18일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+
+<div id="outline-container-org5f82c30" class="outline-2">
+<h2 id="org5f82c30">관련글</h2>
+<div class="outline-text-2" id="text-org5f82c30">
+<p>
+<a href="./swift.html">Swift</a>
+</p>
+</div>
+</div>
+<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
