--- a/swiftui-macos-components.html
+++ b/swiftui-macos-components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 16:24 -->
+<!-- 2019-11-19 Tue 20:00 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>SwiftUI macOS Components - Seorenn Static Pages</title>
@@ -58,9 +58,9 @@ gtag('config', 'UA-44534026-1');
 <div id="outline-container-org5f82c30" class="outline-2">
 <h2 id="org5f82c30">관련글</h2>
 <div class="outline-text-2" id="text-org5f82c30">
-<p>
-<a href="./swift.html">Swift</a>
-</p>
+<ul class="org-ul">
+<li><a href="./swift.html">Swift</a></li>
+</ul>
 </div>
 </div>
 <div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
