--- a/combine-framework.html
+++ b/combine-framework.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-19 Tue 20:02 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Combine Framework - Seorenn Static Pages</title>
@@ -26,12 +26,7 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Combine Framework</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><blockquote>
-<p>
-이 글은 Rx 를 모르는 사람이 쓰는 Combine 글입니다.
-</p>
-</blockquote>
-
+<h2><a href="/">Seorenn Static Pages</a></h2></header>
 <div id="outline-container-org8d16c78" class="outline-2">
 <h2 id="org8d16c78">이게 뭘까?</h2>
 <div class="outline-text-2" id="text-org8d16c78">
@@ -44,6 +39,12 @@ Combine 은 이벤트 처리 오퍼레이터를 조합하여 비동기 이벤트
 <p>
 어쨌든 이름이나 간략한 설명 만으로는 도저히 이해는 안 되는게 정상입니다.
 </p>
+
+<blockquote>
+<p>
+참고로 이 글은 Rx 를 모르는 사람이 쓰는 Combine 글입니다.
+</p>
+</blockquote>
 
 <p>
 우선 코드부터 시작합시다.
@@ -201,6 +202,6 @@ p.<span style="color: #c678dd;">send</span>(<span style="color: #da8548; font-we
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
