Update several pages

--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-19 Tue 20:32 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 메모 - Seorenn Static Pages</title>
@@ -42,7 +42,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-
 <div id="outline-container-org9a4d19e" class="outline-3">
 <h3 id="org9a4d19e">파일(File) 관련</h3>
 <div class="outline-text-3" id="text-org9a4d19e">
@@ -130,13 +129,18 @@ gtag('config', 'UA-44534026-1');
 </ul>
 
 <hr>
+</div>
+</div>
+</div>
 
-<p>
-관련글: <a href="./doom-emacs.html">Doom Emacs</a>
-</p>
+<div id="outline-container-orga5ed969" class="outline-2">
+<h2 id="orga5ed969">관련글</h2>
+<div class="outline-text-2" id="text-orga5ed969">
+<ul class="org-ul">
+<li><a href="./doom-emacs.html">Doom Emacs</a></li>
+</ul>
 </div>
 </div>
-</div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
