Update several pages

--- a/swift.html
+++ b/swift.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 16:24 -->
+<!-- 2019-11-19 Tue 23:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift - Seorenn Static Pages</title>
@@ -43,7 +43,7 @@ Swift는 macOS, iOS, watchOS, tvOS를 위한 강력하고 직관적인 프로그
 
 <p>
 애플 공식 스위프트 홈페이지에서는 위와 같이 설명하고 있긴 한데,
-오픈소스라서 굳이 플래폼이나 앱 타입에 구애는 받지 않는 언어라고 봐도 됩니다.
+오픈소스라서 굳이 플랫폼이나 앱 타입에 구애는 받지 않는 언어라고 봐도 됩니다.
 그리고 빛의 속도는 좀 오바고, 네이티브 바이너리로 빌드가 되기 때문에 빠르긴
 빠릅니다만 아무래도 최적화된 C 코드에 비하기는 힘들겠지요.
 </p>
@@ -55,8 +55,8 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </p>
 
 <p>
-다만 아직까지는 애플 플래폼 외에서의 활약은 크게 눈에 띄지는 않는 편이기도
-합니다. 따라서 애플 제품 앱을 개발하려는 용도 외에서는 아직은 추천하기는 좀 힘든 편입니다.
+다만 아직까지는 애플 플랫폼 외에서의 활약은 크게 눈에 띄지는 않는 편이기도
+합니다. 따라서 애플 제품 앱을 개발하려는 용도 외에는 아직 추천하기 좀 힘든 편입니다.
 </p>
 
 <div id="outline-container-org176b2b1" class="outline-2">
@@ -66,6 +66,7 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <li><a href="./combine-framework.html">Combine Framework</a></li>
 <li><a href="./swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
+<li><a href="./swiftui-in-playground.html">SwiftUI in Playground</a></li>
 </ul>
 </div>
 </div>
