--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 20:32 -->
+<!-- 2019-11-20 Wed 22:36 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -38,6 +38,8 @@ gtag('config', 'UA-44534026-1');
 <li><a href="doom-emacs-config-tip.html">Doom Emacs 설정 팁</a></li>
 <li><a href="doom-emacs-install.html">Doom Emacs 설치하기</a></li>
 <li><a href="emacs.html">Emacs</a></li>
+<li><a href="emacs-lisp-errors.html">Emacs Lisp Errors</a></li>
+<li><a href="emacs-lisp-functions.html">Emacs Lisp Functions</a></li>
 <li><a href="emacs-lisp-tips.html">Emacs Lisp 팁</a></li>
 <li><a href="install-emacs.html">Emacs 설치</a></li>
 <li><a href="index.html">Frontpage</a></li>
@@ -52,6 +54,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
+<li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
@@ -62,6 +65,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 20일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
