Update several pages

--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 20:32 -->
+<!-- 2019-11-21 Thu 21:52 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 메모 - Seorenn Static Pages</title>
@@ -114,9 +114,10 @@ gtag('config', 'UA-44534026-1');
 <li><code>SPC :</code> 함수 실행하기(Emacs 의 <code>M-x</code> 와 동일). 콜론 주의.</li>
 <li><code>SPC ;</code> 명령 실행하기(eval expression). 세미콜론임에 주의</li>
 <li><code>gr</code> 선택영역 실행하기(eval region)</li>
-<li><code>gR</code> 버퍼 전체 실행하기(eval buffer). 근데 버그가 있는지 첫 문단만 실행됨.
+<li><code>gR</code> 버퍼 전체 실행하기(eval buffer). 근데 버그가 있는지 첫 문단만 실행되네요?
 추후 수정될 가능성 있음.</li>
 <li><code>SPC m e b</code> 버퍼 전체 실행하기(eval buffer). 이건 잘 돌아감.</li>
+<li><code>S b</code> 선택영역을 괄호(braces)로 둘러싸기</li>
 </ul>
 </div>
 </div>
@@ -126,6 +127,7 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><code>gc</code> 선택영역을 주석(commenting)으로 처리하거나 혹은 해제(uncommenting)</li>
 <li><code>SPC c d</code> 레퍼런스로 이동(Look up reference)</li>
+<li><code>=</code> 선택영역 들여쓰기(indentation) 정리</li>
 </ul>
 
 <hr>
@@ -137,10 +139,11 @@ gtag('config', 'UA-44534026-1');
 <h2 id="orga5ed969">관련글</h2>
 <div class="outline-text-2" id="text-orga5ed969">
 <ul class="org-ul">
-<li><a href="./doom-emacs.html">Doom Emacs</a></li>
+<li><a href="doom-emacs.html">Doom Emacs</a></li>
+<li><a href="vim.html">Vim</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
