--- a/emacs-lisp-functions.html
+++ b/emacs-lisp-functions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-20 Wed 22:36 -->
+<!-- 2019-11-21 Thu 12:58 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs Lisp Functions - Seorenn Static Pages</title>
@@ -41,7 +41,7 @@ gtag('config', 'UA-44534026-1');
 <h3 id="orgc56f546">nth</h3>
 <div class="outline-text-3" id="text-orgc56f546">
 <p>
-리스트의 특정 위치의 아이템을 가져옵니다. (0 base index)
+리스트의 특정 위치의 아이템을 가져옵니다. (0 based index)
 </p>
 <div class="org-src-container">
 <pre class="src src-lisp">(nth <span style="color: #da8548; font-weight: bold;">3</span> '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span> <span style="color: #98be65;">"d"</span> <span style="color: #98be65;">"e"</span>))
@@ -183,6 +183,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 20일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
