--- a/spacemacs.html
+++ b/spacemacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-21 Thu 12:58 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Spacemacs - Seorenn Static Pages</title>
@@ -28,7 +28,7 @@ gtag('config', 'UA-44534026-1');
 <h1 class="title">Spacemacs</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header><p>
 스페이스맥스(Spacemacs)는 Community Driven Emacs Configuration 으로 거대한 설정
-파일 묶음 프로젝트입니다. Vim 키맵을 구현하는 evil 을 기반으로 많은 확장들을
+파일 묶음 프로젝트입니다. <a href="vim.html">Vim</a> 키맵을 구현하는 evil 을 기반으로 많은 확장들을
 여기에 맞게 설정하고 있습니다. 또한 이름에 맞게 스페이스키를 커맨드 트리거로
 사용하는 등 기존 Emacs 에 비해 편리하면서도 통일된 키맵을 제공하는 것이 특징입니다.
 </p>
@@ -61,6 +61,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
