--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-20 Wed 21:37 -->
+<!-- 2019-11-21 Thu 12:58 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -51,9 +51,10 @@ gtag('config', 'UA-44534026-1');
 <h3 id="orgf4a2e4e">에디터(Editors)</h3>
 <div class="outline-text-3" id="text-orgf4a2e4e">
 <ul class="org-ul">
-<li><a href="./emacs.html">Emacs</a></li>
-<li><a href="./doom-emacs.html">Doom Emacs</a></li>
-<li><a href="./spacemacs.html">Spacemacs</a></li>
+<li><a href="emacs.html">Emacs</a></li>
+<li><a href="doom-emacs.html">Doom Emacs</a></li>
+<li><a href="spacemacs.html">Spacemacs</a></li>
+<li><a href="vim.html">Vim</a></li>
 </ul>
 </div>
 </div>
@@ -61,9 +62,9 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org846c188">프로그래밍 언어(Programming Language)</h3>
 <div class="outline-text-3" id="text-org846c188">
 <ul class="org-ul">
-<li><a href="./swift.html">Swift</a></li>
-<li><a href="./python.html">Python</a></li>
-<li><a href="./lisp.html">Lisp</a></li>
+<li><a href="swift.html">Swift</a></li>
+<li><a href="python.html">Python</a></li>
+<li><a href="lisp.html">Lisp</a></li>
 </ul>
 </div>
 </div>
@@ -71,12 +72,12 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org1822954">링크 모음</h3>
 <div class="outline-text-3" id="text-org1822954">
 <ul class="org-ul">
-<li><a href="./apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
-<li><a href="./web-dev-links.html">웹 개발 관련 링크 모음</a></li>
-<li><a href="./server-stack-links.html">서버 스택 관련 링크 모음</a></li>
-<li><a href="./etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
-<li><a href="./emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
-<li><a href="./service_links.html">눈에 띄는 서비스 링크 모음</a></li>
+<li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
+<li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
+<li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
+<li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
+<li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
+<li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
 </ul>
 </div>
 </div>
@@ -84,13 +85,13 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org32930d9">기타</h3>
 <div class="outline-text-3" id="text-org32930d9">
 <p>
-사이트의 모든 글 링크는 <a href="./sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부
+사이트의 모든 글 링크는 <a href="sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부
 링크가 걸리지 않은 페이지는 '폐기처분(?) 되었지만 404를 피하기 위해 그냥 남겨둔
 것'일 수도 있으니 주의(?) 부탁드립니다.
 </p>
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 20일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
