Update several pages with new MongoDB page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-21 Thu 12:58 -->
+<!-- 2019-11-23 Sat 00:05 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -68,6 +68,10 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
+<div id="outline-container-orgd9d658f" class="outline-3">
+<h3 id="orgd9d658f">분류하기 애매한 것들</h3>
+</div>
+
 <div id="outline-container-org1822954" class="outline-3">
 <h3 id="org1822954">링크 모음</h3>
 <div class="outline-text-3" id="text-org1822954">
@@ -92,6 +96,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
