--- a/web-dev-links.html
+++ b/web-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-23 Sat 00:05 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>웹 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -65,6 +65,7 @@ gtag('config', 'UA-44534026-1');
 <h2 id="org76d7b43">CSS</h2>
 <div class="outline-text-2" id="text-org76d7b43">
 <ul class="org-ul">
+<li><a target="_blank" href="https://dev.to/adrianbdesigns/you-can-create-these-elements-without-javascript-525a">You can create these elements without JavaScript</a></li>
 <li><a target="_blank" href="https://dev.to/hankchizljaw/a-modern-css-reset-6p3">A Modern CSS Reset</a></li>
 <li><a target="_blank" href="https://www.purgecss.com">Purgecss</a>: 쓰지 않는 CSS를 삭제하는데 도움을 주는 도구</li>
 </ul>
@@ -86,6 +87,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
