--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-21 Thu 21:52 -->
+<!-- 2019-11-23 Sat 00:05 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -44,6 +44,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="install-emacs.html">Emacs 설치</a></li>
 <li><a href="index.html">Frontpage</a></li>
 <li><a href="lisp.html">Lisp</a></li>
+<li><a href="mongodb.html">MongoDB</a></li>
 <li><a href="org-mode.html">Org Mode</a></li>
 <li><a href="org-tip.html">Org Mode 팁 모음</a></li>
 <li><a href="org-publish.html">Org Publish</a></li>
@@ -66,6 +67,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
